# CEIA_IAE_TP

./: .gitignore  TP_Integrador_Optimizacion_IA.pptx  benchmark.py  create_presentation.js  data_utils.py  generate_presentation.py  main.py  pyproject.toml
consigna/: Trabajo Práctico Integrador_ optimización y despliegue de IA en entornos restringidos.md
models/: ablation.onnx  baseline.onnx  int8_static_model.onnx  int8_static_pruned_model.onnx
notebooks/: TP_Integrador_IAE(2).ipynb
