[project]
name = "tp-ia-embebida"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.0",
    "torch>=2.11.0",
    "torchvision>=0.16.0",
    "pillow>=10.0.0",
]
